--- a/_includes/sectionArchiveTop.html
+++ b/_includes/sectionArchiveTop.html
@@ -7,7 +7,7 @@
   <div class="container-fluid">
     <div class="col-12">
       <div class="card bg-transparent border-0">
-          <div class="row no-gutters">
+          <div class="row no-gutters px-3">
             {% if page.image %}
               <div class="col-sm-2"  style="margin-left: -50px;">
                   <img class="card-img border border-3 border-dark" src="{{page.image}}" alt="{{page.title}}">
