--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       <div class="col p-3">
         <h4 class="d-flex justify-content-around">
           <a href="https://www.instagram.com/asmaneh.art.and.architecture/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.instagram.com/asmaneh.art.and.architecture/"><i class="fab fa-telegram-plane"></i></a>
+          <a href="https://t.me/asmaaneh"><i class="fab fa-telegram-plane"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
         </h4>
       </div>
