fixed many bugs

--- a/_includes/post-form.html
+++ b/_includes/post-form.html
@@ -98,6 +98,13 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-12">
+          <label for="postExcerpt">چکیده</label>
+          <textarea name="postExcerpt" id="postExcerpt" class="form-control" maxlength="500" placeholder="حداکثر ۵۰۰ کاراکتر..."></textarea>
+
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
           <label for="postText">متن</label>
           <textarea id="editor" class="form-control" placeholder="متن"></textarea>
