--- a/_includes/cardVertical.html
+++ b/_includes/cardVertical.html
@@ -28,6 +28,7 @@
 {% elsif post.featureImg %}
 {% assign postthumbnail = post.featureImg %}
 {%endif%}
+{% if postthumbnail %}{% assign maxWords = 25 %}{% else %}{% assign maxWords = 150 %}{%endif%}
 
   <div class="card shadow-sm  p-0 text-dark border bg-light border-3 border-black">
           <div class="card-body m-0 p-0">
@@ -50,7 +51,7 @@
               <div class="p-3">
                 <h5 class="card-title"><a href="{{post.url}}">{% if post.shortTitle%}{{post.shortTitle}}{%else%}{{post.title}}{%endif%}</a></h5>
                 {% unless post.authors == 'asmaneh'%}{%if pageauthorurl%}<a href="{{pageauthorurl}}"><h6>{{pageauthor}}</h6></a>{%else%}<h6>{{pageauthor}}</h6>{%endif%}{% endunless %}
-                <p class="card-text">{% if postthumbnail %}{{post.content | markdownify | truncatewords: 25  | strip_html}}{%else%}{{post.content | markdownify | truncatewords: 150  | strip_html}}{%endif%}</p>
+                <p class="card-text small">{% if post.excerpt %}{{post.excerpt | markdownify | truncatewords: maxWords  | strip_html}}{%else%}{{post.content | markdownify | truncatewords: maxWords  | strip_html}}{% endif %}</p>
               </div>
             </div>
           </div>
