--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,22 +95,18 @@ layout: default
         {% assign maxRelated = 3 %}
         {% assign minCommonTags =  1 %}
         {% assign maxRelatedCounter = 0 %}
-
         {% for post in site.posts %}
-
             {% assign sameTagCount = 0 %}
-            {% assign commonTags = '' %}
-
-            {% for category in post.categories %}
+            {% assign commonTags = ',' %}
+            {% for tag in post.tags %}
               {% if post.url != page.url %}
-                {% if page.categories contains category %}
+                {% if page.tags contains tag %}
                   {% assign sameTagCount = sameTagCount | plus: 1 %}
-                  {% capture tagmarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
+                  {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
                   {% assign commonTags = commonTags | append: tagmarkup %}
                 {% endif %}
               {% endif %}
             {% endfor %}
-
             {% if sameTagCount >= minCommonTags %}
             {% include cardVertical.html %}
               {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
@@ -118,11 +114,9 @@ layout: default
                 {% break %}
               {% endif %}
             {% endif %}
-
           {% endfor %}
       </div>
       </section>
-
 </main>
 <script type="text/javascript">
   $("code").parents('p').prop("style", "text-align:left; direction:ltr;");
