--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
 html, body {
   font-family: Calibri, Arial !important;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -8,7 +8,7 @@ html, body {
   line-height: 1.65;
 }
 a {
-  color: #000000;
+  color: #0645AD;
   font-weight: 500;
   text-decoration: none !important;
   line-height: 1.6;
