--- a/_includes/post-form.html
+++ b/_includes/post-form.html
@@ -35,7 +35,7 @@
           <label for="poststatus">وضعیت</label>
           <select class="form-control" id="postStatus"  selected='false'>
             <option value="false" id="draft" value="false">پیش‌‌نویس</option>
-            <option value="true" id="published" value="true" style="display:none;">انتشار</option>
+            <option value="true" id="published" value="true">انتشار</option>
           </select>
         </div>
 
