--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -251,3 +251,5 @@ blockquote p {
   height: 80px;
   filter: invert(1);
 }
+.img-gallery a {flex-grow: 1;}
+.img-gallery img {height: 200px;width: 100%; flex-grow: 1; object-fit: cover; margin: 2px;}
