--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% if page.jsFile == 'edit.js' %}<link rel="stylesheet" href="/assets/vendors/bootstrap-tagsinput/tagsinput.css">{% endif %}
     <link rel="stylesheet" href="/assets/vendors/fontawesome/css/all.css">
     <link rel="stylesheet" href="/assets/vendors/lightbox/ekko-lightbox.css">
-    <link rel="stylesheet" href="/assets/css/asmaneh.css?v=2.4">
+    <link rel="stylesheet" href="/assets/css/asmaneh.css?v=2.42">
     <script type="text/javascript" src="/assets/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/vendors/bootstrap.min.js"></script>
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/markdown.js"></script>{% endif %}
@@ -18,6 +18,7 @@
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-markdown.fa.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-tagsinput/tagsinput.js"></script>{% endif %}
     <script src="/assets/vendors/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="/assets/vendors/tinymce/jquery.tinymce.min.js"></script>
     <script src="/assets/vendors/lightbox/ekko-lightbox.min.js"></script>
   </head>
   <body>
@@ -39,10 +40,10 @@
   </body>
 </html>
 <script src="/assets/js/simple-jekyll-search.min.js"></script>
-<script type="text/javascript" src="/assets/js/functions.js?v=2.41"></script>
-<script type="text/javascript" src="/assets/js/asmaneh.js?v=2.41"></script>
-{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=2.41"></script>{% endif %}
-<script src="https://alitayebi.com/asmaneh/dist.js?v=2.412" defer async></script>
+<script type="text/javascript" src="/assets/js/functions.js?v=2.42"></script>
+<script type="text/javascript" src="/assets/js/asmaneh.js?v=2.42"></script>
+{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=2.42"></script>{% endif %}
+<script src="https://alitayebi.com/asmaneh/dist.js?v=2.42" defer async></script>
 <script>
   window.simpleJekyllSearch = new SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
