--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,7 +8,7 @@ html, body {
   line-height: 1.65;
 }
 a {
-  color: #0645AD;
+  color: #000000;
   font-weight: 500;
   text-decoration: none !important;
   line-height: 1.6;
@@ -18,6 +18,9 @@ a:hover {
 }
 p {
   text-align: justify;
+}
+p a {
+  color: #0645AD;
 }
 .navbar {
 }
