--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@ layout: default
 {% assign pageauthor = page.authors %}
 {% endif %}
 {% endfor %}
+<style>
+</style>
 <main role="main">
 
   {% include sectionPostTop.html %}
