--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -54,17 +54,19 @@
                 </a>
               </div>
               {%endunless%}
-              <div class="px-3" style="margin-bottom:-15px;">
+              <div class="px-3">
                 <h5 class="card-title mb-0"><a href="{{post.url}}">{% if post.shortTitle%}{{post.shortTitle}}{%else%}{{post.title  | truncatewords: 10}}{%endif%}</a></h5>
                 {% unless post.authors == 'asmaneh'%}{%if pageauthorurl %}<a href="{{pageauthorurl}}"><h6>{{pageauthor}}</h6></a>{%else%}<h6>{{pageauthor}}</h6>{%endif%}{% endunless %}
                 <p class="card-text small">{% if post.excerpt %}{{post.excerpt | markdownify | truncatewords: maxWords  | strip_html}}{%else%}{{post.content | markdownify | truncatewords: maxWords  | strip_html}}{% endif %}</p>
               </div>
               <div class="d-flex flex-row mb-0 justify-content-end">
-                {% if botcat %}<a class="link-light-box" href="{{botcaturl}}">
+                {% if botcat %}
+                <a class="link-light-box" href="{{botcaturl}}">
                     <div class="py-2 px-3 mt-auto border bg-light border-3 border-black mb-0 border-bottom-0 border-right-0">
                       {{botcat}}
                     </div>
-                </a>{% endif %}
+                </a>
+                {% endif %}
                 <a class="link-light-box" href="{{post.url}}">
                   <div class="persianDate py-2 px-3 mt-auto border bg-light border-3 border-black mb-0 border-bottom-0 border-right-0" data-timestamp="{{post.date | date: '%s'}}">
                   </div>
