--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -57,7 +57,7 @@
               <div class="px-3">
                 <h5 class="card-title mb-0"><a href="{{post.url}}">{% if post.shortTitle%}{{post.shortTitle}}{%else%}{{post.title  | truncatewords: 10}}{%endif%}</a></h5>
                 {% unless post.authors == 'asmaneh'%}{%if pageauthorurl %}<a href="{{pageauthorurl}}"><h6>{{pageauthor}}</h6></a>{%else%}<h6>{{pageauthor}}</h6>{%endif%}{% endunless %}
-                <p class="card-text small">{% if post.excerpt %}{{post.excerpt | markdownify | truncatewords: maxWords  | strip_html}}{%else%}{{post.content | markdownify | truncatewords: maxWords  | strip_html}}{% endif %}</p>
+                <p class="card-text small">{{post.excerpt | strip_html | truncatewords: maxWords }}</p>
               </div>
               <div class="d-flex flex-row mb-0 justify-content-end">
                 {% if botcat %}
