--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -6,10 +6,10 @@ layout: default
 {% assign pagesize = site.posts | where: pagecollection , page.slug | size %}
 <main role="main">
   {% include sectionArchiveTop.html %}
-  <section class="pt-3 bg-light text-dark" style="min-height: 100vh;">
-    <div class="container-fluid py-0">
+  <nav class="navbar navbar-expand-lg py-3 navbar-light bg-light">
+    <div class="container-fluid py-0 justify-content-end">
       {% if page.collection == 'types'%}
-      <div class="d-flex flex-row-reverse">
+      <div id="navbarSupportedContent" class="">
         {% assign type-categories = site.categories | where: 'type', page.slug %}
         {% for category in type-categories %}
         <div class="btn-group rounded-0 my-1">
@@ -22,8 +22,9 @@ layout: default
         {% endfor %}
       </div>
       {% endif %}
-
     </div>
+  </nav>
+  <section class="pt-3 bg-light text-dark" style="min-height: 100vh;">
     <div class="container-fluid px-5 py-4">
       <div class="row">
         {% assign filtered_posts = site.posts | where: pagecollection, page.slug  %}
