--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 {% for author in page.authors %}{% assign auth = site.authors | where: 'slug', author | first %}
 {% if auth %}
 {% assign pageauthor = auth.title %}
+{% assign pageauthorsubtitle = auth.subTitle %}
 {% assign pageauthorurl = auth.url %}
 {% assign pageauthorbio = auth.content | strip_newlines %}
 {% else %}
@@ -75,7 +76,7 @@ layout: default
           </div>
           <div class="border border-dark border-3 d-flex justify-content-around mt-0 p-3">
             <p>
-              <strong>{{pageauthorbio}}</strong>
+              <strong>{{pageauthor}}{% if pageauthorsubtitle %} ({{pageauthorsubtitle}}){%endif%}</strong>: {{pageauthorbio}}
             </p>
           </div>
         </div>
