--- a/_includes/sectionPostTop.html
+++ b/_includes/sectionPostTop.html
@@ -21,7 +21,7 @@
         {% endunless %}
         {% if page.attachedPDF %}
         <a class="link-dark-box" href="{{page.attachedPDF}}" target="_blank">
-          <div class="h3 py-2 px-3 border {% unless page.authors == 'asmaneh'%}border-top-0{%endunless%} border-left-0 border-3 border-white mt-0">
+          <div class="h3 py-2 px-3 border {% unless page.authors == 'asmaneh'%}border-left-0{%endunless%} border-top-0 border-3 border-white mt-0">
             دانلود <i class="far fa-file-pdf"></i>
           </div>
         </a>
