--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,8 +96,8 @@ layout: default
           مطالب مرتبط
         </div>
       </div>
-      <div class="card-columns">
-        {% assign maxRelated = 3 %}
+      <div class="card-deck">
+        {% assign maxRelated = 4 %}
         {% assign minCommonTags =  1 %}
         {% assign maxRelatedCounter = 0 %}
         {% for post in site.posts %}
