--- a/_includes/sectionArchiveTop.html
+++ b/_includes/sectionArchiveTop.html
@@ -25,7 +25,7 @@
                         </a>
                   </div>
                   {% endif %}
-                  <div>
+                  <div class="mb-4">
                     {% if page.icon %}
                     <img src="{{page.icon}}" alt="{{page.title}}" class="title-icon top-img">
                     {% else %}
@@ -35,9 +35,8 @@
                     {%unless pagecontent == ""%}<p class="mx-3">{{pagecontent}}</p>{%endunless%}
                   </div>
                   <div class="d-flex flex-row mt-0 justify-content-end">
-                    <div class="h5 py-2 px-3 mt-auto border bg-transparent border-3 border-white text-white mb-0 border-bottom-0 border-right-0">
-                      تعداد مطلب: {{pagesize}}
-                    </div>
+                    <!--<div class="h5 py-2 px-3 mt-auto border bg-transparent border-3 border-white text-white mb-0 border-bottom-0 border-right-0">
+                    </div>-->
                   </div>
                 </div>
               </div>
