--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -6,24 +6,32 @@ layout: default
 {% assign pagesize = site.posts | where: pagecollection , page.slug | size %}
 <main role="main">
   {% include sectionArchiveTop.html %}
-  <nav class="navbar navbar-expand-lg py-3 navbar-light bg-light">
-    <div class="container-fluid py-0 justify-content-end">
-      {% if page.collection == 'types'%}
-      <div id="navbarSupportedContent" class="">
-        {% assign type-categories = site.categories | where: 'type', page.slug %}
-        {% for category in type-categories %}
-        <div class="btn-group rounded-0 my-1">
-          {% if category.icon %}
-          <a href="{{category.url}}" class="mx-1"><img src="{{category.icon}}" alt="{{category.title}}" class="nav-icon"></a>
-          {% else %}
-          <a href="{{category.url}}" class="btn border-3 bold bg-transparent border-dark rounded-0 mx-1" style="font-weight:bold;">{{category.title}}</a>
-          {% endif %}
+  <section>
+    <div class="container-fluid bg-light">
+      <div class="row">
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg py-3 navbar-light">
+            <div class="container-fluid py-0 justify-content-end">
+              {% if page.collection == 'types'%}
+              <div id="navbarSupportedContent" class="">
+                {% assign type-categories = site.categories | where: 'type', page.slug %}
+                {% for category in type-categories %}
+                <div class="btn-group rounded-0 my-1">
+                  {% if category.icon %}
+                  <a href="{{category.url}}" class="mx-1"><img src="{{category.icon}}" alt="{{category.title}}" class="nav-icon"></a>
+                  {% else %}
+                  <a href="{{category.url}}" class="btn border-3 bold bg-transparent border-dark rounded-0 mx-1" style="font-weight:bold;">{{category.title}}</a>
+                  {% endif %}
+                </div>
+                {% endfor %}
+              </div>
+              {% endif %}
+            </div>
+          </nav>
         </div>
-        {% endfor %}
       </div>
-      {% endif %}
     </div>
-  </nav>
+  </section>
   <section class="pt-3 bg-light text-dark" style="min-height: 100vh;">
     <div class="container-fluid px-5 py-4">
       <div class="row">
