--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{{page.collection}}
 {% for author in page.authors %}{% assign auth = site.authors | where: 'slug', author | first %}
 {% if auth %}
 {% assign pageauthor = auth.title %}
@@ -11,11 +12,11 @@ layout: default
 {% assign pageauthor = page.authors %}
 {% endif %}
 {% endfor %}
-<main role="main">
+<main role="main" class="main">
 
   {% include sectionPostTop.html %}
 
-  <section>
+  <section class="post">
     <div class="container py-5">
       <div class="row justify-content-md-center">
         <div class="col col-lg-8" markdown="1">
@@ -91,7 +92,7 @@ layout: default
           </div>
 
   </section>
-  <section class="bg-black text-light">
+  <section class="bg-black text-light post">
     <div class="container-fluid py-4">
       <div class="row px-4">
         <div class="h3 py-2 px-3 mt-auto border border-3 border-light mb-3">
@@ -124,6 +125,13 @@ layout: default
           {% endfor %}
       </div>
       </section>
+</main>
+<main class="edit">
+  <section>
+    <div class="container">
+      {% include post-edit-form.html%}
+    </div>
+  </section>
 </main>
 <script type="text/javascript">
   $("code").parents('p').prop("style", "text-align:left; direction:ltr;");
