--- a/_layouts/post-edit.html
+++ b/_layouts/post-edit.html
@@ -126,6 +126,13 @@ layout: default
       </div>
       </section>
 </main>
+<main class="edit">
+  <section>
+    <div class="container">
+      {% include post-edit-form.html%}
+    </div>
+  </section>
+</main>
 <script type="text/javascript">
   $("code").parents('p').prop("style", "text-align:left; direction:ltr;");
 </script>
