--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,13 @@
     </div>
     <div class="row text-center mx-4 mt-3 border border-light border-3 border-right-0 border-left-0 border-bottom-0">
       <div class="col p-3">
-        <h4>صفحۀ نخست</h4>
+        <h4><a href="/">صفحۀ نخست</a></h4>
       </div>
       <div class="col p-3">
-        <h4>دربارۀ ما</h4>
+        <h4><a href="/about/">دربارۀ ما</a></h4>
       </div>
       <div class="col p-3">
-        <h4>تماس</h4>
+        <h4>تماس <small>asmanehchannel@gmail.com</small></h4>
       </div>
       <div class="col p-3">
         <h4 class="d-flex justify-content-around">
@@ -27,7 +27,7 @@
       </div>
       <div class="col p-3">
         <h4>
-          ۱۳۹۹ ©
+          ۱۴۰۰ ©
         </h4>
       </div>
 
