--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,13 +3,13 @@ layout: default
 ---
 <main role="main" class="main">
 
-  {% include sectionPostTop.html %}
+  {% include sectionPageTop.html %}
 
   <section class="post">
     <div class="container py-5">
       <div class="row justify-content-md-center">
         <div class="col col-lg-8" markdown="1">
-          {{page.content}}
+          {{page.content | markdownify}}
         </div>
       </div>
   </section>
