--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
               <div class="input-group-prepend">
                 <div class="input-group-text" id="btnGroupAddon">لینک کوتاه</div>
               </div>
-              <input type="text" class="form-control" disabled dir="ltr" id="shortLink" value="{{site.url}}{{page.url}}"  aria-describedby="basic-addon2">
+              <input type="text" class="form-control" disabled dir="ltr" id="shortLink" value="http://asmaneh.com{{page.url}}"  aria-describedby="basic-addon2">
               <div class="input-group-append">
                 <button type="button" class="btn btn-primary btn-copy js-tooltip js-copy" onclick="copyToCilpboard('shortLink')" title="کپی لینک">
                   <!-- icon from google's material design library -->
