home page updated

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row px-4">
       <div class="col d-flex ml-3 text-center">
-        <h4 class="align-self-center">حلقۀ تاریخ پژوهان و نظریه‌‌پژوهان معماری و هنر ایران</h4>
+        <h4 class="align-self-center">وبگاه تاریخ‌پژوهی و نظریه‌پژوهی معماری و هنر</h4>
       </div>
       <div class="col-1 text-center">
         <img class="w-100" src="/assets/img/asmaneh-logo-white.png" alt="">
@@ -14,6 +14,7 @@
       </div>
       <div class="col p-3">
         <h4><a href="/about/">دربارۀ ما</a></h4>
+        
       </div>
       <div class="col p-3">
         <h4>تماس <small>asmanehchannel@gmail.com</small></h4>
