minor bug in homepage fixed

--- a/_includes/sectionGallery.html
+++ b/_includes/sectionGallery.html
@@ -38,9 +38,8 @@
           {% if postthumbnail %}
           <div class="col-sm-8 card-image card-image-hr">
             <a href="{{post.url}}">
-            <div class="square border border-3 border-dark" style="background-image: url('{{postthumbnail}}'); background-size: cover;height: 350px;">
-            </div>
-          </a>
+            <div class="border border-3 border-dark" style="background-image: url('{{postthumbnail}}'); background-size: cover;height: 350px; background-position: center center;"></div>
+            </a>
           </div>
           {%endif%}
           <div class="col-sm mt-2 d-flex align-items-center" >
