english about page added

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 
   {% include sectionPageTop.html %}
 
-  <section class="post">
+  <section class="post{% if page.lang == 'en'%} english{%endif%}">
     <div class="container py-5">
       <div class="row justify-content-md-center">
         <div class="col col-lg-8" markdown="1">
