--- a/_includes/sectionPageTop.html
+++ b/_includes/sectionPageTop.html
@@ -1,4 +1,4 @@
-<section id="topSection" class="h-100 py-3 bg-black text-light" style="{% if page.featureImg %} background-image:linear-gradient(#00000090, #00000090),url('{{page.featureImg}}');{%endif%}">
+<section id="topSection" class="h-100 py-3 bg-black text-light{% if page.lang == 'en'%} english{%endif%}" style="{% if page.featureImg %} background-image:linear-gradient(#00000090, #00000090),url('{{page.featureImg}}');{%endif%}">
   <div class="container h-100">
     <div class="row h-100">
       <div class=" p-3 d-flex  align-items-start flex-column">
