about link added to top nav

--- a/_includes/nav-top.html
+++ b/_includes/nav-top.html
@@ -43,6 +43,10 @@
           {% endif %}
         </div>
         {% endfor %}
+        <div class="btn-group rounded-0">
+          <a href="/about/en/" class="btn border-3 bold bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} rounded-0"  style="font-weight:bold;">about</a>
+        </div>
+
     </div>
   </div>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#x2315; </span>
