--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,10 +67,10 @@
   </body>
 </html>
 <script src="/assets/js/simple-jekyll-search.min.js"></script>
-<script type="text/javascript" src="/assets/js/functions.js?v=2.43"></script>
+<script type="text/javascript" src="/assets/js/functions.js?v=2.4"></script>
 <script type="text/javascript" src="/assets/js/asmaneh.js?v=2.42"></script>
 {% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=2.44"></script>{% endif %}
-<script src="https://cp.asmaneh.com/dist.js?v=2.8" defer async></script>
+<script src="https://cp2.asmaneh.com/dist.js?v=2.8" defer async></script>
 <script>
   window.simpleJekyllSearch = new SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
